fixed over-wrap of course detail titles on preview mobile

--- a/src/assets/sass/imports/_preview-course.scss
+++ b/src/assets/sass/imports/_preview-course.scss
@@ -106,7 +106,7 @@ button.back {
       font-family: Inter;
       font-style: normal;
       font-weight: normal;
-      font-size: 18px;
+      font-size: 15px;
       line-height: 135.02%;
       color: #343434;
       padding: 16px 26px;
